Maqueta Valor Ambiental 0.2
ala ala ala todos sabine qui es un commit innecesario pero necessario

--- a/sass/_areas.sass
+++ b/sass/_areas.sass
@@ -42,3 +42,18 @@
     padding-top: 80px
     background-color: rgb(0, 40, 249)
     height: 330px
+    
+@media(max-width:768px)
+
+  #areas
+    margin-top: 0px
+    .container
+      padding-left: 0px
+      padding-right: 0px
+      margin-left: 0px
+      margin-right: 0px
+      .row
+        margin-left: 0px !important
+        margin-right: 0px !important
+        padding-left: 0px !important
+        padding-right: 0px !important
