--- a/sass/main.sass
+++ b/sass/main.sass
@@ -3,11 +3,11 @@
 @import navdefault
 /*Barra de Navegación inversa*/
 @import navinverse
+/ Slider Fotorama Home
+@import slider
 /*Estilos videos*/
 @import videos
 /*Estilos graficos*/
 @import graficos
-/*mediaqueries*/
-@import mediaqueries
 /*mediaqueries*/
 @import areas
