--- a/sass/_graficos.sass
+++ b/sass/_graficos.sass
@@ -20,3 +20,15 @@
     border-top-color: rgba(74, 44, 7, 1) !important
     border-top: solid 5px rgba(255, 255, 255, 0.3) !important
     color: rgb(255, 255, 255) !important
+    
+@media(max-width:768px)
+  #graficos
+
+    h1
+      margin-top: -40px
+      text-align: center
+      width: auto
+      background-color: rgb(237, 109, 9)
+      padding: 10px
+      color: rgb(255, 255, 255)
+      font-size: 20pt
