--- a/sass/_areas.sass
+++ b/sass/_areas.sass
@@ -16,33 +16,31 @@
     padding-left: 0px
     padding-right: 0px
   .wrapper1
-    background-color: rgb(0, 249, 87)
     background-image: url('../images/ave.jpg')
     background-size: cover
     height: 330px
   .wrapper2
     padding-top: 80px
-    background-color: rgb(249, 60, 0)
+    background-color: rgb(247, 82, 0)
     height: 330px
   .wrapper3
-    background-color: rgb(93, 54, 42)
     background-image: url('../images/ave.jpg')
     background-size: cover
     height: 330px
   .wrapper4
     padding-top: 80px
-    background-color: rgb(0, 144, 249)
+    background-color: rgb(29, 87, 147)
     height: 330px
+
   .wrapper5
-    background-color: rgb(214, 0, 249)
     background-image: url('../images/paisaje.jpg')
     background-size: cover
     height: 330px
   .wrapper6
     padding-top: 80px
-    background-color: rgb(0, 40, 249)
+    background-color: rgb(198, 6, 178)
     height: 330px
-    
+
 @media(max-width:768px)
 
   #areas
@@ -57,3 +55,6 @@
         margin-right: 0px !important
         padding-left: 0px !important
         padding-right: 0px !important
+    .wrapper2, .wrapper4, .wrapper6
+      width: auto
+      text-align: left
