--- a/sass/main.sass
+++ b/sass/main.sass
@@ -3,7 +3,7 @@
 @import navdefault
 /*Barra de Navegación inversa*/
 @import navinverse
-/ Slider Fotorama Home
+/* Slider Fotorama Home*/
 @import slider
 /*Estilos videos*/
 @import videos
@@ -11,3 +11,5 @@
 @import graficos
 /*mediaqueries*/
 @import areas
+/*footer*/
+@import footer
