--- a/css/main.css
+++ b/css/main.css
@@ -26,13 +26,29 @@
   #nabvar.navbar-default .navbar-nav li {
     font-size: 12pt; }
     #nabvar.navbar-default .navbar-nav li a {
-      color: white; }
+      color: white !important; }
+  #nabvar.navbar-default .navbar-nav .active a {
+    background-color: #0a0a0a !important; }
 
 #nabvar.navbar-inverse {
   -webkit-transition: background 0.5s ease-in-out, padding 0.5s ease-in-out;
   -moz-transition: background 0.5s ease-in-out, padding 0.5s ease-in-out;
   transition: background 0.5s ease-in-out, padding 0.5s ease-in-out; }
 
+/*Barra de Navegación inversa */
+#nabvar.navbar-inverse {
+  border: 0px; }
+  #nabvar.navbar-inverse .navbar-brand svg.logo {
+    -webkit-filter: drop-shadow(0.5px 0.5px 0.5px #f5f5f5);
+    filter: drop-shadow(0.5px 0.5px 0.5px #f5f5f5);
+    padding: 10px;
+    max-width: 30% !important;
+    height: auto;
+    -webkit-transition: background 0.5s ease-in-out, padding 0.5s ease-in-out;
+    -moz-transition: background 0.5s ease-in-out, padding 0.5s ease-in-out;
+    transition: background 0.5s ease-in-out, padding 0.5s ease-in-out; }
+
+/* Slider Fotorama Home */
 .fotorama svg.logo {
   width: 70%;
   position: absolute;
@@ -47,33 +63,36 @@
   -webkit-filter: drop-shadow(2px 2px 1px #000);
   filter: drop-shadow(2px 2px 1px #000); }
 
-/*Barra de Navegación inversa */
-#nabvar.navbar-inverse .navbar-brand svg.logo {
-  -webkit-filter: drop-shadow(0.5px 0.5px 0.5px #f5f5f5);
-  filter: drop-shadow(0.5px 0.5px 0.5px #f5f5f5);
-  padding: 10px;
-  max-width: 30% !important;
-  height: auto;
-  -webkit-transition: background 0.5s ease-in-out, padding 0.5s ease-in-out;
-  -moz-transition: background 0.5s ease-in-out, padding 0.5s ease-in-out;
-  transition: background 0.5s ease-in-out, padding 0.5s ease-in-out; }
-
 /*Estilos videos */
 #videos {
   margin-top: 20px; }
   #videos h1 {
-    color: #ED6D09;
-    padding: 10px; }
-  #videos .panel-default {
-    border-radius: 0px !important; }
+    margin-left: -5px;
+    text-align: left;
+    width: 350px;
+    background-color: #ed6d09;
+    padding: 10px;
+    color: white; }
   #videos .col-xs-12 {
     padding: 10px; }
 
+@media(max-width:768px) {
+  #videos h1 {
+    margin-top: 0px;
+    text-align: center;
+    width: auto;
+    background-color: #ed6d09;
+    padding: 10px;
+    color: white;
+    font-size: 20pt; } }
 /*Estilos graficos */
 #graficos {
   padding: 10px;
-  background-color: #714d22;
+  background-color: #94c923;
   margin-top: 60px; }
+  #graficos p {
+    padding-top: 80px;
+    color: white; }
   #graficos .col-lg-4 {
     padding: 20px !important; }
   #graficos h1 {
@@ -83,39 +102,31 @@
     background-color: #ed6d09;
     padding: 10px;
     color: white; }
-  #graficos .panel-default {
-    border-radius: 0px !important;
-    border-color: #4a2c07 !important; }
-  #graficos .panel-footer {
-    border-radius: 0px !important;
-    background-color: #4a2c07 !important;
-    border-top-color: #4a2c07 !important;
-    border-top: solid 5px rgba(255, 255, 255, 0.3) !important;
-    color: white !important; }
 
-/*mediaqueries */
 @media(max-width:768px) {
-  #graficos h1 {
-    margin-top: -40px;
-    text-align: center;
-    width: auto;
-    background-color: #ed6d09;
-    padding: 10px;
-    color: white;
-    font-size: 20pt; }
+  .container {
+    padding-left: 0px !important;
+    padding-right: 0px !important;
+    margin-left: 0px !important;
+    margin-right: 0px !important; }
+    .container .row {
+      margin-left: 0px !important;
+      margin-right: 0px !important;
+      padding-left: 0px !important;
+      padding-right: 0px !important; }
 
-  #areas {
-    margin-top: 0px; }
-    #areas .container {
-      padding-left: 0px;
-      padding-right: 0px;
-      margin-left: 0px;
-      margin-right: 0px; }
-      #areas .container .row {
-        margin-left: 0px !important;
-        margin-right: 0px !important;
-        padding-left: 0px !important;
-        padding-right: 0px !important; } }
+  #graficos {
+    padding: 0px;
+    margin-top: 40px; }
+    #graficos h1 {
+      margin-top: -40px;
+      text-align: left;
+      width: 768px;
+      background-color: #ed6d09;
+      color: white;
+      font-size: 20pt; }
+    #graficos p {
+      padding: 10px; } }
 /*mediaqueries */
 #areas {
   margin-top: 20px; }
@@ -135,31 +146,52 @@
     padding-left: 0px;
     padding-right: 0px; }
   #areas .wrapper1 {
-    background-color: #00f957;
     background-image: url("../images/ave.jpg");
     background-size: cover;
     height: 330px; }
   #areas .wrapper2 {
     padding-top: 80px;
-    background-color: #f93c00;
+    background-color: #f75200;
     height: 330px; }
   #areas .wrapper3 {
-    background-color: #5d362a;
     background-image: url("../images/ave.jpg");
     background-size: cover;
     height: 330px; }
   #areas .wrapper4 {
     padding-top: 80px;
-    background-color: #0090f9;
+    background-color: #1d5793;
     height: 330px; }
   #areas .wrapper5 {
-    background-color: #d600f9;
     background-image: url("../images/paisaje.jpg");
     background-size: cover;
     height: 330px; }
   #areas .wrapper6 {
     padding-top: 80px;
-    background-color: #0028f9;
+    background-color: #c606b2;
     height: 330px; }
+
+@media(max-width:768px) {
+  #areas {
+    margin-top: 0px; }
+    #areas .container {
+      padding-left: 0px;
+      padding-right: 0px;
+      margin-left: 0px;
+      margin-right: 0px; }
+      #areas .container .row {
+        margin-left: 0px !important;
+        margin-right: 0px !important;
+        padding-left: 0px !important;
+        padding-right: 0px !important; }
+    #areas .wrapper2, #areas .wrapper4, #areas .wrapper6 {
+      width: auto;
+      text-align: left; } }
+/*footer */
+footer {
+  background-color: #1d232d;
+  padding: 60px; }
+  footer p {
+    color: #4b4b4b;
+    text-align: center; }
 
 /*# sourceMappingURL=main.css.map */
