--- a/sass/_graficos.sass
+++ b/sass/_graficos.sass
@@ -1,7 +1,10 @@
 #graficos
   padding: 10px
-  background-color: rgba(113, 77, 34, 100)
+  background-color: rgba(148, 201, 35, 1)
   margin-top: 60px
+  p
+    padding-top: 80px
+    color: rgb(255, 255, 255)
   .col-lg-4
     padding: 20px !important
   h1
@@ -11,24 +14,28 @@
     background-color: rgb(237, 109, 9)
     padding: 10px
     color: rgb(255, 255, 255)
-  .panel-default
-    border-radius: 0px !important
-    border-color: rgba(74, 44, 7, 1)!important
-  .panel-footer
-    border-radius: 0px !important
-    background-color: rgba(74, 44, 7, 1) !important
-    border-top-color: rgba(74, 44, 7, 1) !important
-    border-top: solid 5px rgba(255, 255, 255, 0.3) !important
-    color: rgb(255, 255, 255) !important
-    
-@media(max-width:768px)
-  #graficos
 
+
+@media(max-width:768px)
+  .container
+    padding-left: 0px !important
+    padding-right: 0px !important
+    margin-left: 0px !important
+    margin-right: 0px !important
+    .row
+      margin-left: 0px !important
+      margin-right: 0px !important
+      padding-left: 0px !important
+      padding-right: 0px !important
+  #graficos
+    padding: 0px
+    margin-top: 40px
     h1
       margin-top: -40px
-      text-align: center
-      width: auto
+      text-align: left
+      width: 768px
       background-color: rgb(237, 109, 9)
-      padding: 10px
       color: rgb(255, 255, 255)
       font-size: 20pt
+    p
+      padding: 10px
