--- a/sass/_navdefault.sass
+++ b/sass/_navdefault.sass
@@ -30,7 +30,10 @@
 		li
 			font-size: 12pt
 			a
-				color: rgb(255, 255, 255)
+				color: rgb(255, 255, 255) !important
+		.active
+			a
+				background-color: rgb(10, 10, 10) !important
 
 
 #nabvar.navbar-inverse
