--- a/sass/_navinverse.sass
+++ b/sass/_navinverse.sass
@@ -1,4 +1,5 @@
 #nabvar.navbar-inverse
+  border: 0px
   .navbar-brand
     svg.logo
       -webkit-filter: drop-shadow( 0.5px 0.5px 0.5px #f5f5f5 )
