--- a/sass/_videos.sass
+++ b/sass/_videos.sass
@@ -1,10 +1,23 @@
 #videos
   margin-top: 20px
   h1
-    color: #ED6D09
+    margin-left: -5px
+    text-align: left
+    width: 350px
+    background-color: rgb(237, 109, 9)
     padding: 10px
-  .panel-default
-    border-radius: 0px !important
+    color: rgb(255, 255, 255)
   .col-xs-12
     padding: 10px
-  
+
+@media(max-width:768px)
+  #videos
+
+    h1
+      margin-top: 0px
+      text-align: center
+      width: auto
+      background-color: rgb(237, 109, 9)
+      padding: 10px
+      color: rgb(255, 255, 255)
+      font-size: 20pt
