--- a/sass/_areas.sass
+++ b/sass/_areas.sass
@@ -44,17 +44,14 @@
 @media(max-width:768px)
 
   #areas
-    margin-top: 0px
-    .container
-      padding-left: 0px
-      padding-right: 0px
-      margin-left: 0px
-      margin-right: 0px
-      .row
-        margin-left: 0px !important
-        margin-right: 0px !important
-        padding-left: 0px !important
-        padding-right: 0px !important
-    .wrapper2, .wrapper4, .wrapper6
-      width: auto
-      text-align: left
+    // margin-top: 0px
+    // .container
+    //   padding-left: 0px
+    //   padding-right: 0px
+    //   margin-left: 0px
+    //   margin-right: 0px
+    //   .row
+    //     margin-left: 0px !important
+    //     margin-right: 0px !important
+    //     padding-left: 0px !important
+    //     padding-right: 0px !important
