--- a/sass/_graficos.sass
+++ b/sass/_graficos.sass
@@ -17,23 +17,15 @@
 
 
 @media(max-width:768px)
-  .container
-    padding-left: 0px !important
-    padding-right: 0px !important
-    margin-left: 0px !important
-    margin-right: 0px !important
-    .row
-      margin-left: 0px !important
-      margin-right: 0px !important
-      padding-left: 0px !important
-      padding-right: 0px !important
   #graficos
-    padding: 0px
+    padding: 20px
     margin-top: 40px
+    margin-left: -20px
+
     h1
+      width: 100%
       margin-top: -40px
-      text-align: left
-      width: 768px
+      text-align: center
       background-color: rgb(237, 109, 9)
       color: rgb(255, 255, 255)
       font-size: 20pt
