--- a/sass/_quienes.sass
+++ b/sass/_quienes.sass
@@ -9,27 +9,15 @@
     color: rgb(255, 255, 255)
     padding: 10px
     width: 330px
-    margin-top: 0px
+    margin-top: 10px
   .panel-default
     border-radius: 0px
     border: none
     background-color: rgb(227, 50, 193)
     color: rgb(245, 245, 245)
-    text-align: center
-
-
-
-
+    text-align: left
+  .alert
+    border-radius: 0px !important
 #videoquienes
   background-color: rgb(14, 14, 14)
   background-size: cover
-
-.equipo
-  background-color: rgb(38, 112, 13)
-  p
-    padding: 20px
-
-#equipo
-  background-color: rgb(110, 36, 154)
-  padding: 10px
-  color:  rgb(255, 255, 255)
