--- a/css/main.css
+++ b/css/main.css
@@ -171,24 +171,28 @@ footer {
 
 /*queines */
 #quienes {
-  background-color: #41ba17; }
+  background-color: whitesmoke; }
   #quienes p {
-    color: #f2f2f2; }
+    color: #3c3c3c; }
   #quienes ul {
     color: #f2f2f2; }
   #quienes h1 {
-    background-color: #f95402;
+    background-color: #02b6f9;
     color: white;
     padding: 10px;
     width: 330px;
-    margin-top: 0px; }
+    margin-top: 10px; }
+  #quienes .panel-default {
+    border-radius: 0px;
+    border: none;
+    background-color: #e332c1;
+    color: whitesmoke;
+    text-align: left; }
+  #quienes .alert {
+    border-radius: 0px !important; }
 
 #videoquienes {
-  background-color: #0e0e0e; }
-
-.equipo {
-  background-color: #26700d; }
-  .equipo p {
-    padding: 20px; }
+  background-color: #0e0e0e;
+  background-size: cover; }
 
 /*# sourceMappingURL=main.css.map */
