--- a/sass/_quienes.sass
+++ b/sass/_quienes.sass
@@ -1,18 +1,23 @@
 #quienes
-  background-color: rgb(65, 186, 23)
+  background-color: rgb(245, 245, 245)
   p
-    color: rgb(242, 242, 242)
+    color: rgb(60, 60, 60)
   ul
     color: rgb(242, 242, 242)
   h1
-    background-color: rgb(249, 84, 2)
+    background-color: rgb(2, 182, 249)
     color: rgb(255, 255, 255)
     padding: 10px
     width: 330px
-    margin-top: 0px
+    margin-top: 10px
+  .panel-default
+    border-radius: 0px
+    border: none
+    background-color: rgb(227, 50, 193)
+    color: rgb(245, 245, 245)
+    text-align: left
+  .alert
+    border-radius: 0px !important
 #videoquienes
   background-color: rgb(14, 14, 14)
-.equipo
-  background-color: rgb(38, 112, 13)
-  p
-    padding: 20px
+  background-size: cover
