--- a/sass/_areas.sass
+++ b/sass/_areas.sass
@@ -16,7 +16,7 @@
     padding-left: 0px
     padding-right: 0px
   .wrapper1
-    background-image: url('../images/ave.jpg')
+    background-image: url('../images/equipo2.jpg')
     background-size: cover
     height: 330px
   .wrapper2
@@ -24,7 +24,7 @@
     background-color: rgb(247, 82, 0)
     height: 330px
   .wrapper3
-    background-image: url('../images/ave.jpg')
+    background-image: url('../images/ambiental.jpg')
     background-size: cover
     height: 330px
   .wrapper4
@@ -33,7 +33,7 @@
     height: 330px
 
   .wrapper5
-    background-image: url('../images/paisaje.jpg')
+    background-image: url('../images/ingenieria2.jpg')
     background-size: cover
     height: 330px
   .wrapper6
