--- a/sass/_videos.sass
+++ b/sass/_videos.sass
@@ -9,6 +9,10 @@
     color: rgb(255, 255, 255)
   .col-xs-12
     padding: 10px
+  h4
+    color: rgb(237, 109, 9)
+  p
+    color: #171717
 
 @media(max-width:768px)
   #videos
