--- a/sass/_main_contacto.sass
+++ b/sass/_main_contacto.sass
@@ -1,8 +1,23 @@
+
+
 #contacto
-	padding-top: 180px
+	padding-top: 100px
+	h1
+		background-color: rgb(198, 6, 178)
+		padding: 10px
+		color: rgb(245, 245, 245)
 	.map
 		width: 100vw
-    
+	.datos
+		padding-top: 10px
+		padding-bottom: 20px
+	.form-control
+		border-radius: 0px !important
+	.fa
+		color: rgb(19, 160, 221)
+	.btn-info
+		background-color: rgb(19, 160, 221) !important
+
 @media(max-width:768px)
 	#contacto
-		padding-top: 40px
+		padding-top: 80px
