--- a/sass/_noticias.sass
+++ b/sass/_noticias.sass
@@ -2,10 +2,32 @@
 /*Barra de Navegación inversa*/
 @import navinverse
 /* Slider Fotorama Home*/
+@import footer
+/* footer*/
+
 
 #noticias
-	padding-top: 180px
+	padding-top: 100px
+	h1
+		background-color: rgb(247, 82, 0)
+		color: rgb(245, 245, 245)
+		padding: 10px
+	a
+		text-decoration: none
+		color: rgb(247, 82, 0)
+	.btn-primary
+		background-color: transparent !important
+		border-radius: 0px !important
+		border: 1px solid rgb(247, 82, 0)
 
+#post
+	padding-top: 100px
+	h1
+		color: rgb(247, 82, 0)
+	.datetime
+		font-style: italic
+		color: rgb(105, 105, 105)
+	
 @media(max-width:767px)
 	#noticias
 		padding-top: 40px
