Y se arreglo el footer
eso

--- a/css/contacto.css
+++ b/css/contacto.css
@@ -78,7 +78,7 @@ footer {
   padding: 10px;
   background-color: #1d232d; }
   footer p {
-    color: #4b4b4b;
+    color: #bababa;
     text-align: center; }
 
 /* footer */
