--- a/css/main.css
+++ b/css/main.css
@@ -185,7 +185,7 @@ footer {
   padding: 10px;
   background-color: #1d232d; }
   footer p {
-    color: #4b4b4b;
+    color: #bababa;
     text-align: center; }
 
 /*queines */
