--- a/css/servicios.css
+++ b/css/servicios.css
@@ -16,14 +16,12 @@
       #nabvar.navbar-default .navbar-toggle .icon-bar .navbar-ex1-collapse {
         border-radius: none; }
   #nabvar.navbar-default .navbar-brand svg.logo {
-    -webkit-filter: drop-shadow(2px 2px 1px #000);
-    filter: drop-shadow(2px 2px 1px #000);
     margin-top: -15px;
-    padding: 10px;
     max-width: 50% !important;
     height: auto; }
   #nabvar.navbar-default .navbar-nav li {
-    font-size: 12pt; }
+    font-size: 12pt;
+    background-color: rgba(0, 0, 0, 0.58); }
     #nabvar.navbar-default .navbar-nav li a {
       color: white !important; }
   #nabvar.navbar-default .navbar-nav .active a {
@@ -34,6 +32,12 @@
   -moz-transition: background 0.5s ease-in-out, padding 0.5s ease-in-out;
   transition: background 0.5s ease-in-out, padding 0.5s ease-in-out; }
 
+@media(max-width:767px) {
+  #nabvar.navbar-default .navbar-collapse ul li {
+    background-color: rgba(0, 0, 0, 0.58); } }
+@media(min-width:1024px) {
+  #nabvar.navbar-default ul {
+    padding-top: 20px; } }
 /*Barra de Navegación inversa */
 #nabvar.navbar-inverse {
   border: 0px; }
@@ -53,7 +57,7 @@ footer {
   padding: 10px;
   background-color: #1d232d; }
   footer p {
-    color: #4b4b4b;
+    color: #bababa;
     text-align: center; }
 
 #ingenieria {
