--- a/css/contacto.css
+++ b/css/contacto.css
@@ -56,7 +56,7 @@
 #contacto {
   padding-top: 100px; }
   #contacto h1 {
-    background-color: #c606b2;
+    background-color: rgb(79, 186, 46);
     padding: 10px;
     color: whitesmoke; }
   #contacto .map {
@@ -67,9 +67,11 @@
   #contacto .form-control {
     border-radius: 0px !important; }
   #contacto .fa {
-    color: #13a0dd; }
+    color: rgb(234, 121, 23); }
   #contacto .btn-info {
-    background-color: #13a0dd !important; }
+    background-color: rgb(234, 121, 23) !important;
+    border-color: rgb(234, 121, 23) !important;
+   }
 
 @media(max-width:768px) {
   #contacto {
