--- a/css/contacto.css
+++ b/css/contacto.css
@@ -29,6 +29,7 @@
     background-color: #0a0a0a !important; }
 
 #nabvar.navbar-inverse {
+
   -webkit-transition: background 0.5s ease-in-out, padding 0.5s ease-in-out;
   -moz-transition: background 0.5s ease-in-out, padding 0.5s ease-in-out;
   transition: background 0.5s ease-in-out, padding 0.5s ease-in-out; }
@@ -41,6 +42,7 @@
     padding-top: 20px; } }
 /*Barra de Navegación inversa */
 #nabvar.navbar-inverse {
+  background-color: #1d232d !important;
   border: 0px; }
   #nabvar.navbar-inverse .navbar-brand svg.logo {
     -webkit-filter: drop-shadow(0.5px 0.5px 0.5px #f5f5f5);
