--- a/css/main.css
+++ b/css/main.css
@@ -41,6 +41,7 @@
     padding-top: 20px; } }
 /*Barra de Navegación inversa */
 #nabvar.navbar-inverse {
+  background-color: #1d232d !important;
   border: 0px; }
   #nabvar.navbar-inverse .navbar-brand svg.logo {
     -webkit-filter: drop-shadow(0.5px 0.5px 0.5px #f5f5f5);
@@ -124,7 +125,20 @@
       color: white;
       font-size: 20pt; }
     #graficos p {
-      padding: 10px; } }
+      padding: 10px; }
+
+      .pie h4{
+        text-align: left;
+      }
+      .pie address{
+        text-align: left;
+      }
+
+      .pieoxido{
+        text-align: center !important;
+      }
+
+     }
 /*mediaqueries */
 #areas {
   margin-top: 20px; }
@@ -219,5 +233,41 @@ footer {
 #videoquienes {
   background-color: #0e0e0e;
   background-size: cover; }
+
+
+.pie h4{
+  color: rgb(255, 255, 255);
+}
+
+.pie address{
+  color: rgb(236, 236, 236)
+}
+
+.pie ul{
+  list-style: none;
+}
+
+.pie #conosotros{
+  color: rgb(237, 138, 7)
+}
+
+.pie #conosotros:hover{
+  font-size: 10pt
+}
+
+.pie a{p
+  text-decoration: none;
+  color: rgb(237, 138, 7);
+}
+
+.pie a:hover{
+  color: rgb(232, 232, 232)
+}
+
+.pie p{
+  text-align: right;
+}
+
+
 
 /*# sourceMappingURL=main.css.map */
