--- a/css/servicios.css
+++ b/css/servicios.css
@@ -40,6 +40,7 @@
     padding-top: 20px; } }
 /*Barra de Navegación inversa */
 #nabvar.navbar-inverse {
+  background-color: #1d232d !important;
   border: 0px; }
   #nabvar.navbar-inverse .navbar-brand svg.logo {
     -webkit-filter: drop-shadow(0.5px 0.5px 0.5px #f5f5f5);
